fix size/gaps header

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,7 +9,7 @@ header {
 
 header img {
   grid-column: 3/5;
-  width: 100%;
+  width: 180px;
 }
 
 header ul {
@@ -29,6 +29,7 @@ header ul {
   }
   header ul {
     grid-column: 4/12;
+    column-gap: 25px;
     font-size: 18px;
   }
 }
@@ -36,9 +37,11 @@ header ul {
 @media screen and (max-width: 1080px) {
   header img {
     grid-column: 1/3;
+    width: 140px;
   }
   header ul {
     grid-column: 3/13;
+    column-gap: 20px;
   }
 }
 
@@ -51,7 +54,7 @@ header ul {
     height: auto;
   }
   header img {
-    width: 200px;
+    width: 180px;
   }
   header ul {
     grid-column: 3/13;
